Fixed menu item spacing

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
   justify-content: center;
   font-size: calc(24px + 2vmin);
   margin-top: 3px;
+  margin-bottom: 5px;
   font-family: 'Goudy Bookletter 1911', 'serif';
 }
 
@@ -37,10 +38,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  margin-bottom: 5px;
 }
 
 .App-menu-item {
-  margin: 5px;
   text-decoration: none;
   font-family: 'Goudy Bookletter 1911', 'serif';
   color: white;
